--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,36 @@
 body {
   background-color: #dadada;
-  font-size: 10px;
+  font-size: 16px;
+}
+
+.baku {
+  background: #fff url("/images/baku.jpg") no-repeat top center;
+}
+
+.london {
+  background: #fff url("/images/london.png") no-repeat top center;
+}
+
+.madrid {
+  background: #fff url("/images/madrid.jpg") no-repeat top center;
+}
+
+.rome {
+  background: #fff url("/images/rome.jpg") no-repeat top center;
+}
+
+.preview {
+  background-size: 100%;
+  height: 300px;
+  margin: 20px 0px
+}
+
+@media screen and (min-width: 575px) {
+  .preview {
+    background-size: 100%;
+    display: inline-block;
+    height: 200px;
+    width: 48%;
+    margin: 20px 0px;
+  }
 }
